--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@ header {
     border-bottom: solid 1px black;
     padding: 15px;
     font-size: 34px;
+    background: rgb(rgb(131, 238, 128))
 }
 
 section {
-    background: rgb(147, 231, 184);
+    background: rgb(222, 228, 224);
     padding: 80px;
 }
 
