--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ header {
     border-bottom: solid 1px black;
     padding: 15px;
     font-size: 34px;
-    background: rgb(rgb(131, 238, 128))
+    background: rgb(131, 238, 128)
 }
 
 section {
