--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header {
     border-bottom: solid 1px black;
     padding: 15px;
     font-size: 34px;
-    background: rgb(161, 232, 188);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s);
 }
 
 section {
