--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ section {
     justify-content: center;
 }
 
-h1 {
+.chamada-texto {
     font-size: 65px;
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s);
 }
