--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body  {
+    background: black;
 margin: 12px;
 font-family: "Libertinus Serif", serif;
 }
@@ -21,7 +22,7 @@ section {
 
 .chamada-texto {
     font-size: 65px;
-background: rgb(210, 207, 207);
+background: rgb(254, 254, 254);
 }
 
 
