--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body  {
-    background: black;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s);
+    background-size: 2000px;
 margin: 45px;
 font-family: "Libertinus Serif", serif;
 }
