--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body  {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s);
-    background-size: 1000px;
+    background-size: 100.%;
 margin: 45px;
 font-family: "Libertinus Serif", serif;
 }
