--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body  {
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s);
+    background-image: url(https://images.app.goo.gl/nAwScTB7N1eNFgmBA);
     background-size: 100.%;
 margin: 45px;
 font-family: "Libertinus Serif", serif;
