--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ font-family: "Libertinus Serif", serif;
 }
 
 header { 
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px rgb(255, 255, 255);
     padding: 15px;
     font-size: 34px;
     background: rgb(0, 0, 0)
