--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ font-family: "Libertinus Serif", serif;
 
 header { 
     border-bottom: solid 1px rgb(255, 255, 255);
+    color: white;
     padding: 15px;
     font-size: 34px;
     background: rgb(0, 0, 0)
