--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,10 @@ c {
 }
 
 h5 {
-    font-size: 20px;
+    font-size: 30px;
     padding-left: 10px;
     justify-content: right;
-    background: rgb(50, 50, 50);
-    padding: 80px;
-    padding-top: 10px;
-    padding-bottom: 5px;
+    color: aliceblue;
 }
 
 .borda {
