--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ h6 {
 }
 
 .deve {
-    padding-bottom: 1px;
+    padding-top: 1px;
      background: rgb(50, 50, 50);
     display: flex;
     justify-content: baseline;
