--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ c {
 }
 
 h5 {
-    margin-block-end: 2px;
+    margin-block-end: 1px;
     padding-bottom: 2px;
     font-size: 30px;
     padding-left: 10px;
@@ -73,6 +73,7 @@ h5 {
 }
 
 .borda {
+    padding-top: 1px;
     padding-left: 20px;
     padding-right: 20px;
 }
